<resources>
    <string name="app_name">calculatrorworks</string>
    <string name="button"></string>
    <string name="sid">8888888888</string>
    <string name="calculator">Calculator</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="plusorminus">+/-</string>
    <string name="_6">6</string>
    <string name="ac">AC</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="percent">%</string>
    <string name="_9">9</string>
    <string name="comm">,</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="ravn">=</string>
    <string name="plus">+</string>
    <string name="multplic">x</string>
    <string name="minus">-</string>
    <string name="del">÷</string>
    <string name="_3">3</string>
</resources>