<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    tools:context="MainActivity">

    <Button
        android:id="@+id/buttonofnull"
        android:layout_width="174dp"
        android:layout_height="79dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonofwhite"
        android:contentDescription="@string/app_name"
        android:onClick="numbersdo"
        android:fontFamily="@font/museo"
        android:text="@string/_0"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,OnClick" />

    <Button
        android:id="@+id/buttonofcomm"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="215dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/buttonofwhite"
        android:contentDescription="@string/app_name"
        android:onClick="numbersdo"
        android:fontFamily="@font/museo"
        android:text="@string/comm"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonofravn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="309dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/buttonofblue"
        android:contentDescription="@string/app_name"
        android:onClick="ansNumb"
        android:fontFamily="@font/museo"
        android:text="@string/ravn"
        android:textColor="#FFFFFF"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button11"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/buttonofwhite"
        android:contentDescription="@string/app_name"
        android:onClick="numbersdo"
        android:fontFamily="@font/museo"
        android:text="@string/_1"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonof2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="119dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/buttonofwhite"
        android:onClick="numbersdo"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/museo"
        android:text="@string/_2"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/buttonof3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="215dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/buttonofwhite"
        android:contentDescription="@string/app_name"
        android:onClick="numbersdo"
        android:fontFamily="@font/museo"
        android:text="@string/_3"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonofplus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="309dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/buttonofblue"
        android:contentDescription="@string/app_name"
        android:onClick="operatorEvent"
        android:text="@string/plus"
        android:textColor="#FFFFFF"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="196dp"
        android:background="@drawable/buttonofwhite"
        android:onClick="numbersdo"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/museo"
        android:text="@string/_4"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonof5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="119dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="196dp"
        android:background="@drawable/buttonofwhite"
        android:onClick="numbersdo"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/museo"
        android:text="@string/_5"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/buttonof6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="215dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="196dp"
        android:background="@drawable/buttonofwhite"
        android:onClick="numbersdo"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/museo"
        android:text="@string/_6"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonofminus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="309dp"
        android:layout_marginBottom="196dp"
        android:background="@drawable/buttonofblue"
        android:contentDescription="@string/app_name"
        android:onClick="operatorEvent"
        android:text="@string/minus"
        android:textColor="#FFFFFF"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonof7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="288dp"
        android:background="@drawable/buttonofwhite"
        android:contentDescription="@string/button"
        android:onClick="numbersdo"
        android:fontFamily="@font/museo"
        android:text="@string/_7"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonof8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="119dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="288dp"
        android:background="@drawable/buttonofwhite"
        android:onClick="numbersdo"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/museo"
        android:text="@string/_8"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonof9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="215dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="288dp"
        android:background="@drawable/buttonofwhite"
        android:onClick="numbersdo"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/museo"
        android:text="@string/_9"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonofmultpllic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="309dp"
        android:layout_marginBottom="288dp"
        android:background="@drawable/buttonofblue"
        android:contentDescription="@string/app_name"
        android:onClick="operatorEvent"
        android:text="@string/multplic"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonofac"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="380dp"
        android:background="@drawable/buttonofwhite"
        android:contentDescription="@string/app_name"
        android:onClick="clearing"
        android:fontFamily="@font/museo"
        android:text="@string/ac"
        android:textColor="#3A4E89"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonofplusorminus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="119dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="380dp"
        android:background="@drawable/buttonofwhite"
        android:contentDescription="@string/app_name"
        android:onClick="numbersdo"
        android:fontFamily="@font/museo"
        android:text="@string/plusorminus"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonofpercent"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="215dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="380dp"
        android:background="@drawable/buttonofwhite"
        android:contentDescription="@string/app_name"
        android:onClick="percent"
        android:fontFamily="@font/museo"
        android:text="@string/percent"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonofdel"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="309dp"
        android:layout_marginBottom="380dp"
        android:background="@drawable/buttonofblue"
        android:contentDescription="@string/app_name"
        android:onClick="operatorEvent"
        android:text="@string/del"
        android:textColor="#FFFFFF"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/wind"
        android:layout_width="366dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/windwsofnumb"
        android:contentDescription="TODO"
        android:radius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <TextView
        android:id="@+id/calculator"
        android:layout_width="140dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="247dp"
        android:fontFamily="@font/museo"
        android:gravity="center_vertical"
        android:text="@string/calculator"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/sid"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="24dp"
        android:alpha="0.08"
        android:fontFamily="@font/stlill"
        android:gravity="center_vertical"
        android:text="@string/sid"
        android:textAlignment="center"
        android:textColor="#373A37"
        android:textIsSelectable="false"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/wind"
        app:layout_constraintEnd_toEndOf="@+id/wind"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/wind"
        app:layout_constraintTop_toTopOf="@+id/wind"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/writingnumbers"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:fontFamily="@font/stlill"
        android:textIsSelectable="false"
        android:textSize="38sp"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="@+id/wind"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wind" />

</androidx.constraintlayout.widget.ConstraintLayout>